<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SettingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:drawableLeft="@drawable/ic_back_black"
                android:drawableTint="@color/white"
                android:gravity="center"
                android:onClick="Back"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/setting"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

        </FrameLayout>

    </androidx.appcompat.widget.Toolbar>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_6sdp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:text="@string/account"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="@color/grey2" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:text="@string/title_notifications"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="@color/grey2" />


            <androidx.appcompat.widget.AppCompatTextView
                android:onClick="changepassword"
                android:id="@+id/tv_changepassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
                android:drawableTint="@color/black"
                android:text="@string/changepassword"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="@color/grey2" />

  <androidx.appcompat.widget.AppCompatTextView
                android:onClick="adfree"
                android:id="@+id/tv_adfree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
                android:drawableTint="@color/black"
                android:text="@string/go_ad_free"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="@color/grey2" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:text="@string/support"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="@color/grey2" />


            <androidx.appcompat.widget.AppCompatTextView
                android:onClick="aboutus"
                android:id="@+id/tv_aboutus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
                android:drawableTint="@color/black"
                android:text="@string/aboutus"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="@color/grey2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:onClick="termscondition"
                android:id="@+id/tv_termsncondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
                android:drawableTint="@color/black"
                android:text="@string/termandcondition"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="@color/grey2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:onClick="privacypolicy"
                android:id="@+id/tv_privacypolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
                android:drawableTint="@color/black"
                android:text="@string/privacypolicy"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="@color/grey2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:onClick="feedback"
                android:id="@+id/tv_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
                android:drawableTint="@color/black"
                android:text="@string/sendafeedback"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="@color/grey2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:onClick="share"
                android:id="@+id/tv_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
                android:drawableTint="@color/black"
                android:text="@string/sharewithfriends"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="@color/grey2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:onClick="delete"
                android:id="@+id/tv_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:drawableRight="@drawable/ic_baseline_delete_24"
                android:drawableTint="@color/black"
                android:text="@string/deleteaccount"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="@color/grey2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:onClick="logout"
                android:id="@+id/tv_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:drawableRight="@drawable/ic_logout"
                android:drawableTint="@color/black"
                android:text="@string/logout"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="@color/grey2" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_appverstion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:gravity="center"
                android:text="appversion"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.core.widget.NestedScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>