<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#02000000"
        android:orientation="vertical">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/bg_edit_des"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_9sdp"
                android:text="@string/markaswinner"
                android:textColor="@color/reddark"
                android:textSize="@dimen/_14sdp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="@color/grey" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_9sdp"
                android:text="@string/report"
                android:textColor="@color/reddark"
                android:textSize="@dimen/_14sdp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rectangular_rounded"
            android:gravity="center"
            android:padding="@dimen/_9sdp"
            android:text="@string/cancel"
            android:textColor="@color/redlight"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>