<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:drawableLeft="@drawable/ic_back_black"
                android:drawableTint="@color/white"
                android:gravity="center"
                android:onClick="Back"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:onClick="Back"
                android:text="@string/changepassword"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

        </FrameLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_margin="@dimen/_20sdp"
        android:background="@color/white"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_78sdp"
            android:layout_height="@dimen/_108sdp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_35sdp"
            android:background="@drawable/logo" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_7sdp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:background="@null"
                android:hint="@string/old_password"
                android:padding="@dimen/_6sdp" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_7sdp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:background="@null"
                android:hint="@string/new_password"
                android:padding="@dimen/_6sdp" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_7sdp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:background="@null"
                android:hint="@string/confirm_password"
                android:padding="@dimen/_6sdp" />


        </androidx.cardview.widget.CardView>


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/bg_login"
            android:onClick="send"
            android:paddingLeft="@dimen/_55sdp"
            android:paddingRight="@dimen/_55sdp"
            android:text="@string/send"
            android:textColor="@color/white" />


    </androidx.appcompat.widget.LinearLayoutCompat>


    <ProgressBar
        android:id="@+id/bar"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>
